# mediocre-service

./: .gitignore  Base.Dockerfile  CMakeLists.txt  Dockerfile  LICENSE  README.md  buf.gen.yaml  buf.yaml  commands.sh  compose.yaml  docker-build-with-cache.sh  docker-build.sh  envoy.yaml  pull-and-retag.ps1  pull-base-and-tag-local.ps1
.github/workflows/: base-docker-image.yml  buf.yml  docker-image.yml  docker.yml  preview-destroy.yml
@buf/typescript/: package.json
grpc/health/v1/: health.cpp  health.hpp
libmediocre/api/: api.cpp  api.hpp  api.proto
libmediocre/dependency/v1/: dependency.cpp  dependency.hpp  dependency.proto
libmediocre/dummy/: dummy.cpp  dummy.hpp  dummy.proto
libmediocre/functions/ocr/v1/: ocr.cpp  ocr.hpp  ocr.proto
libmediocre/health/v1/: health.cpp  health.hpp
libmediocre/main/: main.cpp  main.hpp  main.proto
libmediocre/server/: server.cpp  server.hpp
libmediocre/test/: test.cpp  test.hpp  test.proto
mediocre/configuration/v1beta/: configuration.proto  game.proto  test.proto  user.proto
mediocre/dependency/v1/: dependency.cpp  dependency.hpp  dependency.proto
mediocre/health/v1/: health.cpp  health.hpp
mediocre/image/border/v1beta/: border.cpp  border.hpp  border.proto
mediocre/image/colour/v1beta/: colour.cpp  colour.hpp  colour.proto
mediocre/image/crop/v1beta/: crop.cpp  crop.hpp  crop.proto
mediocre/image/identity/v1beta/: identity.cpp  identity.hpp  identity.proto
mediocre/image/invert/v1beta/: invert.cpp  invert.hpp  invert.proto
mediocre/image/ocr/v1beta/: mediocre_numeric_display.cpp  mediocre_numeric_display.hpp  ocr.cpp  ocr.hpp  ocr.proto
mediocre/image/rotate/v1beta/: rotate.cpp  rotate.hpp  rotate.proto
mediocre/image/scale/v1beta/: scale.cpp  scale.hpp  scale.proto
mediocre/image/threshold/v1beta/: threshold.cpp  threshold.hpp  threshold.proto
mediocre/image/transform/v1beta/: transform.cpp  transform.hpp  transform.proto
mediocre/image/v1beta/: image.cpp  image.hpp  image.proto
mediocre/main/: main.cpp
mediocre/options/v1beta/: options.proto
mediocre/server/: server.cpp  server.hpp
mediocre/test/v1beta/: test.proto
mediocre/transform/v1beta/: transform.cpp  transform.hpp  transform.proto
proxy/: compose.yaml  grpcwebproxy.Dockerfile  minica.Dockerfile
scripts/: build-toolchain-with-cache.sh  build-toolchain-with-registry-cache.sh  run-proxy.sh
scripts/deploy/: deploy-preview.sh  deploy-production.sh  deploy-staging.sh  deploy.sh  destroy-preview.sh  destroy.sh  preview-deploy.sh  preview-destroy.sh
scripts/run/: proxy.sh
